--- a/src/main/resources/public/css/todo.css
+++ b/src/main/resources/public/css/todo.css
@@ -7,3 +7,10 @@ body{
   background-color: #f9f9f9;
   padding: 13px;
 }
+
+#jsonDumpTodos{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 10px;
+}
